--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Dog's API</h2>
+        <h2 class="container__title">Dog's API</h2>
         <div class="card">
             <img class="img" src="img/1.jpg" alt="random cat">
         </div>
